--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Jeremy Lickers Solutions/Home</title>
+</head>
+<body>
+
+<h1>Jeremy Lickers</h1>
+<!-- to do insert photo -->
+<h1>About Me</h1>
+<p>I am an Indigenous computer scientist that is excited about using my talents to create new and innovative software.</p>
+<h1>Skills</h1>
+<ul>
+  <li>Python</li>
+  <li>Java</li>
+  <li>C</li>
+  <li>JavaScript</li>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>R</li>
+  <li>SQL</li>
+  <li>Visual Basic</li>
+  <li>Microsoft Office</li>
+  <li>SharePoint</li>
+  <li>Ruby</li>
+</ul>
+<h1>Experience</h1>
+<p>Research Assistant - Indspire: 2021 – Current</p>
+<ul>
+  <li>Worked in conjunction with Big River Analytics on the merge script using Python for the 10+ years of applications into one database</li>
+  <li>Responsible for performing data analytics using R on applications for post-secondary education</li>
+  <li>In charge of the creation of the SharePoint site for the research assistants, and two other departments</li>
+</ul>
+<h1>Education</h1>
+<p>Bachelor’s of Science – Major in Computer Science, Wilfrid Laurier University, Waterloo, Ontario</p>
+<ul>
+	<li>Graduated in 2020 with a 3.73 GPA</li>
+</ul>
+<h1>Contacts</h1>
+<p><a href="jeremylickerssolutions@gmail.com">jeremylickerssolutions@gmail.com</a></p>
+<p><a href="https://www.linkedin.com/in/jeremy-lickers-earle-b75a19109/">https://www.linkedin.com/in/jeremy-lickers-earle-b75a19109/</a></p>
+<p><a href="https://github.com/JeremyLickers">https://github.com/JeremyLickers</a></p>
+<!-- add icons -->
+</body>
+</html>
