--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,12 +4,32 @@
 <title>Jeremy Lickers Solutions/Home</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">Jeremy Lickers</span>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#about-me">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#skills">Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#experience">Experience</a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" href="#education">Education</a>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-<h1>Jeremy Lickers</h1>
-<!-- to do insert photo -->
-<h1>About Me</h1>
+<h1 id = "about-me">About Me</h1>
 <p>I am an Indigenous computer scientist that is excited about using my talents to create new and innovative software.</p>
-<h1>Skills</h1>
+<h1 id ="skills">Skills</h1>
 <ul>
   <li>Python</li>
   <li>Java</li>
@@ -24,19 +44,19 @@
   <li>SharePoint</li>
   <li>Ruby</li>
 </ul>
-<h1>Experience</h1>
+<h1 id = "experience">Experience</h1>
 <p>Research Assistant - Indspire: 2021 – Current</p>
 <ul>
   <li>Worked in conjunction with Big River Analytics on the merge script using Python for the 10+ years of applications into one database</li>
   <li>Responsible for performing data analytics using R on applications for post-secondary education</li>
   <li>In charge of the creation of the SharePoint site for the research assistants, and two other departments</li>
 </ul>
-<h1>Education</h1>
+<h1 id = "education">Education</h1>
 <p>Bachelor’s of Science – Major in Computer Science, Wilfrid Laurier University, Waterloo, Ontario</p>
 <ul>
 	<li>Graduated in 2020 with a 3.73 GPA</li>
 </ul>
-<h1>Contacts</h1>
+<h1 id="contact">Contact</h1>
 <p><a href="jeremylickerssolutions@gmail.com">jeremylickerssolutions@gmail.com</a></p>
 <p><a href="https://www.linkedin.com/in/jeremy-lickers-earle-b75a19109/">https://www.linkedin.com/in/jeremy-lickers-earle-b75a19109/</a></p>
 <p><a href="https://github.com/JeremyLickers">https://github.com/JeremyLickers</a></p>
