--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <title>Jeremy Lickers Solutions/Home</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed">
   <span class="navbar-brand mb-0 h1">Jeremy Lickers</span>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
