--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,22 @@
 *{
     margin-left: 30px;
 }
+body {
+    padding-top: 52px;
+    background-color: #D3D3D3;
+  }
 .navbar {
     margin-left: -30px;
+    background-color: darkblue;
+    color:white;
+    font-weight: bold;
+}
+.nav-link{
+    color:white;
+}
+
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
